*Empty MediaWiki Message*

--- a/Howraarsame_Amaanreer.mw
+++ b/Howraarsame_Amaanreer.mw
@@ -1,5 +1,4 @@
-'''Howraarsame Amaanreer''' (Cali Amaanreer, Af Ingriis; Howrarsame Amanrer, Af carabi; هورارسمى امان رير) waa beelwayn kamid ah beelaha '''Sade Daarood'''
-Abtirsiinyaha; waa Howraarsame Amaanreer Isaq Gaashireedle Hodanbari Baalyare awsame Mareexaan Sade Daarood.
+'''Howraarsame Amaanreer''' (Cali Amaanreer, Af Ingriis; Howrarsame Amanrer, Af carabi; هورارسمى امان رير) waa beel kamid ah beelaha '''Mareexaan'''
 
 ==Deegaanka==
 Beesha Howraarsame waxay degtaa dhul aad uwayn, waxayna kamid tahay beelaha ugu dhulka wayn Somalida. Waxay degtaa in ka badan  4 Gobol oo ka mid ah Jubaland iyo Galmudug, sidoo Waxay ka degaan magaalooyinka 
