*Empty MediaWiki Message*

--- a/Ciraaq.mw
+++ b/Ciraaq.mw
@@ -201,12 +201,12 @@ Ciraaqdan cusub oo ay soo mareen gumeysigii Ingriiska iyo dawlado aad u fara bad
 [[File:Qishla Building 3.jpg|thumb|upright|[[Qushla]] clock tower]] 
 [[File:Sargon of Akkad.jpg|thumb|upright|Bronze head of an Akkadian, probably an image of Manishtusu or Naram-Sin; descendants of Sargon ([[National Museum of Iraq]]).]]
 
-[[File:Shahbandar Cafe.jpg|thumb|The Shabandar Café in Baghdad, 1923]]
+[[File:Shahbandar Cafe.jpg|thumb|400px|Baghdad, 1923]]
 [[File:PARSONS(1808) p008 View of Bagdad on the Persian side of the Tigris.jpg|thumb|A view of Baghdad from the print collection in Travels in Asia and Africa, etc. (ed. J. P. Berjew, British Library)]]
 [[File:Nineveh Nebi Yunus Excavation Bull-Man Head.JPG|thumb|right|[[Lamassu|Winged Bull]] excavated at Nebi Yunus by Iraqi archaeologists]]
 
 [[File:Nineve.jpg|thumb|left|100px|Bronze lion from Nineveh.]]
-[[File:Iraqi medical students at Basra University College of Medicine (2010).JPG|thumb|Students at the college of medicine of the [[University of Basrah]], 2010.]]
+[[File:Iraqi medical students at Basra University College of Medicine (2010).JPG|thumb|Jamadka iraq Basrah]], 2010.]]
 [[File:Iraq - Lengas.png|thumb|Lengas principalas d'Iraq.]]
 [[File:Iraq - Clima.png|thumb|Clima d'Iraq.]]
 [[File:Iraq - Topografia.png|thumb|right|Topografia d'Iraq.]]
