*Empty MediaWiki Message*

--- a/Al_Mahwit.mw
+++ b/Al_Mahwit.mw
@@ -9,7 +9,7 @@
 |motto                  =
 <!-- images and maps  ----------->
 |image_skyline          = Almawhit01 flickr.jpg
-|imagesize              = 
+|imagesize              = 400px
 |image_caption          = 
 |image_flag             = 
 |flag_size              =
