*Empty MediaWiki Message*

--- a/CMA_CGM-_Marcabka-shirkadka.mw
+++ b/CMA_CGM-_Marcabka-shirkadka.mw
@@ -45,6 +45,7 @@
 }}
 [[Image:CMA CGM container.JPG|vignette|400px|thumb|right|marcabka franciska macduwan,baadca dunida ]]
 '''CMA CGM S.A.''' waa  shirkad faransiis oo qaada oona dhoofisa konteenarada.<ref>{{cite web|url=http://www.usinenouvelle.com/article/rodolphe-saade-nouveau-directeur-general-de-cma-cgm.N499799|title=Rodolphe Saadé, nouveau directeur général de CMA CGM - L'Usine Aéro|first=L'Usine|last=Nouvelle|date=9 February 2017|publisher=}}</ref> Waa koox hoggaamisa maraakiibta adduunka oo dhan,<ref>{{cite web|url=https://www.edumaritime.net/shipping-logistics-career/cma-cgm-shipping-group|title=CMA CGM Shipping Group - Merchant Marine & Maritime Careers|website=www.edumaritime.net}}</ref> iyadoo adeegsaneeso 200 oo wadooyinka maraakiibta ah inta u dhaxaysa 420 dekedood oo ku kala yaal 150 waddan oo kala duwan<ref>{{ cite web | url = http://www.cma-cgm.com | title = CMA CGM website}}</ref>, waxay ku jirtaa darajada afaraad oo ka dambeysa Maersk Line, MSC iyo Khadadka Maraakiibta COSCO.<ref>{{cite web|url=https://alphaliner.axsmarine.com/PublicTop100/|title=Alphaliner TOP 100|date=5 January 2019}}</ref>. Xarunteeda waxay ku taalaa degmada [[Marseille]] ee [[faransiiska]], <ref>"[http://www.cma-cgm.com/AboutUs/Contact.aspx Contact]." GMA CGM. Retrieved on 22 September 2011. "CMA CGM Marseille Head Office 4, quai d'Arenc 13235 Marseille cedex 02 France "</ref> xarunteeda waqooyiga Mareykankana waxay ku taal degmada [[Norfolk]], [[Virginia]], [[Mareykanka]].
+{{Flag|France}}
 
 ==Taariikh==
 
