*Empty MediaWiki Message*

--- a/Reer_Aw_Xassan.mw
+++ b/Reer_Aw_Xassan.mw
@@ -9,4 +9,4 @@
 |rels =Islam 
 |related-c = [[Dir]] iyo qabiilo [[Soomaali]] kale
 }}
-'''Reer Aw Xassan''' ({{lang-en|''Rer aw Hassan''}}; {{lang-ar|او حسن}}) waxay degaan xuduuda [[soomaaliya]] iyo [[itoobiya]] u dhaxeeyso qaasatan deegaanada feer-feer, abaaley,Buur-cukur,galcusube, Gasiilo,deefow, shabeelaha hoose qoryooleey qoryaale mariin gubaay  fulay gariyow  iyo war rooti geedlaay wishaaqo bustooley gobolka bay  buula fulaay war aw qeeroow mareerow masaare ay leeshaaw bisiq cade  aadaale iidow adaawe  gobolka bagool waajid xudur hiiran jowhar buulaay  beladweyne iyo qeybo kalo kamid ah gobolada [[Soomaaliya]].reer awxasan waa laba beel oo waa weyn waana nuur iyo saacid <nuur > waa  reer aw cilmi  reer aw mahdi iyo reer udgoone rer aw saacid waa maxamed awsaacid xuuriye iyo qeyre reer aw cilmi iyo reer awmahdi iyo udgoone kala bar waxaay dagaan shabelaha hoose iyo bay iyo bakool ee gobolada somaliya
+'''Reer Aw Xassan''' ({{lang-en|''Rer aw Hassan''}}; {{lang-ar|او حسن}}) waxay degaan xuduuda [[soomaaliya]] iyo [[itoobiya]] u dhaxeeyso qaasatan deegaanada feer-feer, abaaley,Buur-cukur,galcusube, Gasiilo,deefow, shabeelaha hoose qoryooleey qoryaale mariin gubaay  fulay gariyow  iyo war rooti geedlaay wishaaqo bustooley gobolka bay  buula fulaay war aw qeeroow mareerow masaare ay leeshaaw bisiq cade  aadaale iidow adaawe  gobolka bagool waajid xudur hiiran jowhar buulaay  beladweyne iyo qeybo kalo kamid ah gobolada [[Soomaaliya]]. waxa kale oo Beeshu dagtaa xuduuda Somaliya Iyo Kenya gaar ahaan Magalada Mandera iyo Tuulooyinka hoos yimaada. reer awxasan waa laba beel oo waa weyn waana nuur iyo saacid <nuur > waa  reer aw cilmi  reer aw mahdi iyo reer udgoone rer aw saacid waa maxamed awsaacid xuuriye iyo qeyre reer aw cilmi iyo reer awmahdi iyo udgoone kala bar waxaay dagaan shabelaha hoose iyo bay iyo bakool ee gobolada somaliya
