*Empty MediaWiki Message*

--- a/Template:Refimprove.mw
+++ b/Template:Refimprove.mw
@@ -10,7 +10,7 @@
 | fix   = fadlan ka caawi [{{fullurl:{{FULLPAGENAME}}|action=edit}} habaynta] adigoo [[Help:Introduction to referencing/1|ku soo daraayo xigashooyin lagu kalsoonaan karo]]. Xigasho la'aan waxay sabibi kartaa in meesha laga saaro.
 | talk  = {{{talk|}}}
 | date  = {{{taariikh|}}}
-| cat   = Maqaalada u baahan xigasho ee
+| cat   = Maqaalada u baahan xigasho
 | all   = Dhammaan maqaalada ubaahan xigashada
 }}<!--{{refimprove}} end-->
 }}<noinclude>
