*Empty MediaWiki Message*

--- a/Template:Caddayn_u_baahan.mw
+++ b/Template:Caddayn_u_baahan.mw
@@ -1,7 +1,7 @@
 {{ {{{|safesubst:}}}#invoke:Unsubst||date=__DATE__ |$B=
 {{Unreferenced|name=Unreferenced section|small={{#if:{{{small|}}}|left}}
 |subst=<includeonly>{{subst:substcheck}}</includeonly>
-|date={{{date|}}}
+|date={{{taariikh|}}}
 }}
 }}<noinclude>
 {{Documentation}}
