*Empty MediaWiki Message*

--- a/Lataliyaha_cashuuraha.mw
+++ b/Lataliyaha_cashuuraha.mw
@@ -1,4 +1,5 @@
-La-taliyaha cashuuraha ama la taliyaha canshuuraha waa qof leh tababar horumarsan iyo aqoonta sharciga canshuuraha. Howlaha lataliyaha canshuurta badanaa waa la ilaaliyaa si loo yareeyo canshuurista iyadoo wali sharciga loo hogaansamo xaaladaha dhaqaale ee qalafsan. La-taliyayaasha Canshuuraha sidoo kale waxaa loo hayaa inay metelaan macaamiisha kahor mas'uuliyiinta canshuuraha iyo maxkamadaha canshuuraha si ay u xalliyaan arrimaha canshuuraha.
+{{caddayn u baahan|taariikh=luuliyo 2020}}
+'''La taliyaha cashuuraha''' ama la taliyaha canshuuraha waa qof leh tababar horumarsan iyo aqoonta sharciga canshuuraha. Howlaha lataliyaha canshuurta badanaa waa la ilaaliyaa si loo yareeyo canshuurista iyadoo wali sharciga loo hogaansamo xaaladaha dhaqaale ee qalafsan. La-taliyayaasha Canshuuraha sidoo kale waxaa loo hayaa inay metelaan macaamiisha kahor mas'uuliyiinta canshuuraha iyo maxkamadaha canshuuraha si ay u xalliyaan arrimaha canshuuraha.
 
 == Aduunka ==
 
