*Empty MediaWiki Message*

--- a/Howraarsame_Amaanreer.mw
+++ b/Howraarsame_Amaanreer.mw
@@ -1,3 +1,4 @@
+{{nadiifin|sababta=qoraalka wuxuu u baahanyahay hagaajin waxaana ka maqan xog caddayn}}
 '''Howraarsame Amaanreer''' (Cali Amaanreer, Af Ingriis; Howrarsame Amanrer, Af carabi; هورارسمى امان رير) waa beel kamid ah beelaha '''Mareexaan'''
 
 ==Deegaanka==
