*Empty MediaWiki Message*

--- a/Af_Oromo.mw
+++ b/Af_Oromo.mw
@@ -1,14 +1,60 @@
+{{short description|Luqada kushiitiga ee looga hadlo itoobiya iyo Kenya}}
+{{Infobox language
+| name             = Oromo
+| altname          = 
+| nativename       = ''Afaan  Oromoo''
+| states           = [[Itoobiya]], [[Kenya]]
+| region           = [[Oromia]]
+| ethnicity        = [[Dadka Oromo|Oromo]]
+| speakers         = {{sigfig|34|2}} milyan oo qof ee Ethiopia
+| date             = qiyaas 2015
+| ref              = e18
+| speakers2        = {{sigfig|500,000|2}} ee Kenya (tirakoobka 2015), {{sigfig|41,600|2}} ee Soomaaliya (tirakoobka 2015)
+| nation           = {{flagcountry|Oromia}}<br>({{flagcountry|Itoobiya}})
+| minority         = {{flagcountry|Kenya}}
+| familycolor      = Afro-Asiatic
+| fam2             = [[Luqadaha Kushiitiga|Kushiitig]]
+| fam3             = [[Luqadaha kushiitiga dhulka bariga hoose|Dhulka bariga hoose]]
+| fam4             = [[Oromoid languages|Oromoid]]
+| script           = [[Qoraalka laatiinka|Latiin]]
+| iso1             = om
+| iso2             = orm
+| iso3             = orm
+| lc1              = gax
+| ld1              = [[Borana language|Borana–Arsi–Guji–Wallaggaa-Shawaa Oromo]]
+| lc2              = hae
+| ld2              = [[Luqada bariga oromo|Bariga oromo]]
+| lc3              = orc
+| ld3              = [[Orma language|Orma]]
+| lc4              = gaz
+| ld4              = [[West Central Oromo language|West Central Oromo]]
+| lc5              = ssn
+| ld5              = [[Waata language|Waata]]
+| map              = Map of the Oromo language.svg
+| mapcaption       = Aaga bariga afrika meesha oromo looga hadlo
+| notice           = IPA
+| glotto           = nucl1736
+| glottorefname    = Nuclear Oromo
+}}'''Af Oromo''' waa luqad kamid ah baahda [[Afro-Aasiyatik]]. 25 millyan oo qof ayaa ku hadla, Af-oromadu, waa luqada ugu wayn walaalaha [[Luqadaha Kushiitiga|Kushiitiga]]. Wadamada lagaga hadlo waxaa ka mid ah, [[Itoobiya]] iyo [[Kiinya]].
 
-Af-Oromo
 
 
 
 
-'''Af Oromo''' waa luqad kamid ah baahda [[Afro-Aasiyatik]]. 25 millyan oo qof ayaa ku hadla, Af-oromadu, waa luqada ugu wayn walaalaha [[Luqadaha Kushiitiga|Kushiitiga]]. Wadamada lagaga hadlo waxaa ka mid ah, [[Itoobiya]] iyo [[Kiinya]].
 
 
 
-Wadannmaha 
 
-* {{Flag|Ethiopia}}
-* {{Flag|Kenya}}
+
+
+
+
+
+
+
+
+
+{{gumud}}
+[[category:luqada oromo]]
+[[Category:Luqadaha itoobiya]]
+[[Category:Luqadaha Kenya]]
