Replacing Flag_of_Morocco_1666_1915.svg with [[File:Flag_of_Morocco_(1666–1915).svg]] (by [[:c:User:CommonsDelinker|CommonsDelinker]] because: [[:c:COM:FR|File renamed]]: [[:c:COM:FR#FR4|Criterion 4]]).

--- a/Template:Country_data_Morocco.mw
+++ b/Template:Country_data_Morocco.mw
@@ -5,7 +5,7 @@
 | flag alias-1073 = Flag of Morocco 1073 1147.svg
 | flag alias-1147 = Flag of Morocco 1147 1269.svg
 | flag alias-1258 = Flag of Morocco 1258 1659.svg
-| flag alias-1666 = Flag of Morocco 1666 1915.svg
+| flag alias-1666 = Flag of Morocco (1666–1915).svg
 | flag alias-1913 = Flag of Spanish Morocco.svg
 | flag alias-civil = Civil Ensign of Morocco.svg
 | flag alias-naval = Naval Ensign of Morocco.svg
