--- a/Buurdhuxunle.mw
+++ b/Buurdhuxunle.mw
@@ -1,1 +1,1 @@
-Buurdhuxunle waa degmo kamid ah degmoyinka gobolka bakool Buurdhuxunle waxa la asc abbey samadi 1957m waxayna dagmada Buurdhuxunle Ujirtaa caasidegmada Huddur 90km degmada Buurdhuxunle  waxaana daga beesha hadame oo degta gobolada baay iyo bakool waana magaalo ganacsiyeed oo aad u mashquul badan Buurdhuxunle Bakool SOMALIA
+Buurdhuxunle waa degmo kamid ah degmoyinka gobolka bakool Buurdhuxunle waxa la asc abbey samadi 1957m waxayna dagmada Buurdhuxunle Ujirtaa caasidegmada Huddur 90km degmada Buurdhuxunle  waxaana daga beesha hadame oo degta gobolada baay iyo bakool waana magaalo ganacsiyeed oo aad u mashquul badan Buurdhuxunle Bakool SOMALIA madhaayto somalia
