Xigasho wasiirka warfaafinta

--- a/Maxamed_Xaashi.mw
+++ b/Maxamed_Xaashi.mw
@@ -7,13 +7,17 @@
 | term_end      = 8 January 2005
 | predecessor   = [[Cabdullaahi Yuusuf Axmed]]
 | successor     = [[Maxamuud Muuse Xirsi Cadde]]  
-| birth_date    = 
-| birth_place   = boholaha xargagan
+| birth_date    =1927 
+| birth_place   = Buuraha xargaga laascaano
 | party         = 
 | religion      = [[Islaam]]
 }}
 
-Maxamed Cabdi Xaashi Wuxuu ku dhashay Baadiyaha Xargaga ee ka xidha dhinaca Galbeed Magaalada Laascaanood ee Gobolka Sool,wuxuu wax barashadiisii ka bilaabay Magaalada Laascaanood oo markaas ahayd qariyad yar,Muddo ka dib wuxuu wax barashadiisii u wareegey Magaalada Shiikh
+Maxamed Cabdi Xaashi Wuxuu ku dhashay Baadiyaha Xargaga ee ka xidha dhinaca Galbeed Magaalada Laascaanood ee Gobolka Sool,wuxuu wax barashadiisii ka bilaabay Magaalada Laascaanood oo markaas ahayd qariyad yar,Muddo ka dib wuxuu wax barashadiisii u wareegey Magaalada buro
+
+Katagey 5 carura 3 wiil iyo laba gabdhoo
+
+Hoyadiis xaawo raage
 
 {{Gumud}}
 
