--- a/Burtinle.mw
+++ b/Burtinle.mw
@@ -59,7 +59,7 @@
 |blank_info             =
 |website                =
 }}
-'''Buurtinle''' waa [[magaalo]] ay degenyiin dad badan oo soomaaliyed. Waana [[dagmo]] ku taal [[Nugaal|Gobolka Nugaal]] waxa ayna u dhaxaysaa magaalooyinka [[Gaalkacyo]] iyo [[Garowe]].Waxaana degmada mara laami.Waa magaalo qadiimi ah, dagaaladii sokeeye ee ka qarxay dalka [[Soomaaliya]] way ka badbaaday. Waxaa ku nool Burtinle dad gaaraya ilaa 139,000 oo qof. Guud ahaan waxaa daga qabaa'ilo kala duwan oo ay kamid yihiin beelwaynta Awrtable<nowiki>''</nowiki> kana dhasheen dad badan oo masuliyin ah sida Cabdiaziz Nur Hirsi waxaa uu kamid ahaa rug-cadayaashii siyaasada Somaliyeed. 1964 waxaa uu kamid noqday Xildhibaanadii Qaranka, Sidoo kale waxaa uu shaqooyin kala duwan kasoo qabaty dawladii Militariga ahayd ee AUN Madaxwaybe Mohamed Siyad bare. Sidoo kale waxaa lagu xasuustaa dhimihii maamul gobaleed Puntland oo da khaas ah isagu uga shaqeeyey dhinaca sharci jadinta Maamulkaas iyo Ugas Cumar geelle maxamed kaneec kana mid aha isimidadi asasay puntland state of Somalia xiligu marku ahaa 1998 aabihiisna  wuxuu aha udub dhigihii ugu horeeyey ee dega  Buirtinle  Ugaas Geelle maxamed kaneec AUN waxa uuna geeriyoday taariikhdu markay ahayd 1983 sido kale waxa kadhashay Awrtable<nowiki>''</nowiki>   gabyagi caanka ka ahaa oo laga wada yaqaan dhaman gayiga somaliyed Careys ciise kaaeshe,  waxay kalo isla dagaan majeerteen ee Cumar Maxamuud, gaar ahaan reer xirsi reer aadan  Cigalle, reer Mahad,  waxa kalo dega beelwaynta madhibaan   Buurtinle waxay laf dhabar u tahay reer guuraaga dega deegaankaasi. waxaana ku yaal ceelal waawayn oo xooluhu ka cabaan.
+'''Buurtinle''' waa [[magaalo]] ay degenyihiin dad badan oo soomaaliyed. Waana [[dagmo]] ku taal [[Nugaal|Gobolka Nugaal]] waxa ayna u dhaxaysaa magaalooyinka [[Gaalkacyo]] iyo [[Garowe]].Waxaana degmada mara laami.Waa magaalo qadiimi ah, dagaaladii sokeeye ee ka qarxay dalka [[Soomaaliya]] way ka badbaaday. Waxaa ku nool Burtinle dad gaaraya ilaa 139,000 oo qof. Guud ahaan waxaa daga qabaa'ilo kala duwan oo ay kamid yihiin beelwaynta Awrtable<nowiki>''</nowiki> kana dhasheen dad badan oo masuliyin ah sida Cabdiaziz Nur Hirsi waxaa uu kamid ahaa rug-cadayaashii siyaasada Somaliyeed. 1964 waxaa uu kamid noqday Xildhibaanadii Qaranka, Sidoo kale waxaa uu shaqooyin kala duwan kasoo qabaty dawladii Militariga ahayd ee AUN Madaxwaybe Mohamed Siyad bare. Sidoo kale waxaa lagu xasuustaa dhimihii maamul gobaleed Puntland oo da khaas ah isagu uga shaqeeyey dhinaca sharci jadinta Maamulkaas iyo Ugas Cumar geelle maxamed kaneec kana mid aha isimidadi asasay puntland state of Somalia xiligu marku ahaa 1998 aabihiisna  wuxuu aha udub dhigihii ugu horeeyey ee dega  Buirtinle  Ugaas Geelle maxamed kaneec AUN waxa uuna geeriyoday taariikhdu markay ahayd 1983 sido kale waxa kadhashay Awrtable<nowiki>''</nowiki>   gabyagi caanka ka ahaa oo laga wada yaqaan dhaman gayiga somaliyed Careys ciise kaaeshe,  waxay kalo isla dagaan majeerteen ee Cumar Maxamuud, gaar ahaan reer xirsi reer aadan  Cigalle, reer Mahad,  waxa kalo dega beelwaynta madhibaan   Buurtinle waxay laf dhabar u tahay reer guuraaga dega deegaankaasi. waxaana ku yaal ceelal waawayn oo xooluhu ka cabaan.
 
 == Taariikhda magaalada ==
 Degmada ayaa ah mid soo koreesa, horumarna laga dareemayo xaga aqoonta , dhaqaalaha iyo arimaha bulshada intaba. Ayadoo ay kuyaalaan dhammaan heerarka kala duwan ee dugsiyada waxbarashada kuwaasoo gaarsiisan ilaa heer dugsi sare.
