*Empty MediaWiki Message*

--- a/Al-Shabaab.mw
+++ b/Al-Shabaab.mw
@@ -8,7 +8,7 @@ Calaamadaha shaqsiga ee jaaliyaasha Shabaab waxaa ka mid ah kuwa riyaaq ku arka 
 
 Calaamadaha na tusayso Shabaab iney 2010kii marxaladeeda iyo tamarteeda ugu sahlida badnayd waa caasimada ayey qabsatay. Marxaladaha al-Shabaab ee 2010kii, markay amar-marintood karti iyo sahli lahayd, aad baa sharci-good la dhaliili jirey iyo anshax-kood (their discipline) la cambaareeyn jirey. 
 
-Madaxweynaha Soomaaliya, waxay fariin i dirtay Shabaab oo cafis ah, sii awooda Shabaab la kor mariyo diwaanad (records) ama faahfaahin (details) oo ah xaalad dayalsan, mid qaadici iyo caasilaad ah, mid la xaqirayay, iyo mid wiiqasho lahaansho ah.
+Madaxweynaha Soomaaliya, waxay fariin i dirtay Shabaab oo cafis ah, sii awooda Shabaab la kor mariyo diwaanad (records) ama faahfaahin (details) oo ah xaalad dayalsan, mid qaadici iyo caasilaad ah, mid la xaqirayay (downgraded), iyo mid wiiqasho lahaansho ah.
 
 ==Taariikh==
 Waxaa ay dhisantahay muddadii ka danbeysay sanadka marka uu ahaa 2003dii iyadoo ka soo dhex baxday xarakaat-kii Islaamiga ahaa ee waagaas ka hor dhismay sida Xarakada Islaax, Tajamuc al-Islaami iyo waliba xarakaatki takfiiriga ahaa ee markaa ka jiray qeybo ka mid ah wadanka [[Soomaaliya]]. Xarakaadkaan dhismay kadib burburkii Dawladda Dhexe ee Soomaaliya waxaa ay dhamaantood qabeen fikir ah in wadanku uu yeesho dowlad Islaami ah laakin shaqsiyaatka ku mideysan xarakaatkaas ayaa iyagu laf ahaantooda ku kala duwanaa sida lagu gaari karo dowlad Islaami ah oo ay Soomaaliya yeelato. Shaqsiyaadka qaar ayaa qabay in lagu gaari karo oo kaliya dowlad Islaami ah in la qaato qori oo lala dagaalo inta ka soo horjeeda taasoo dabcan ay kow ka ahaayeen.
