*Empty MediaWiki Message*

--- a/Cumar_Faaruuq.mw
+++ b/Cumar_Faaruuq.mw
@@ -1,4 +1,4 @@
-{{Infobox person
+'''Taariikh Nololeedka Sheekh Cumar Faaruuq(AUN)'''{{Infobox person
 | honorific_prefix   = 
 | name               = Sheekh Cumar Faaruuq</br> شيخ عمرالفارؤق
 | honorific_suffix   = 
