Removing [[:c:File:Daaru_Salaam_University.jpg|Daaru_Salaam_University.jpg]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Jaamacadda_Daaru_Salaam.mw
+++ b/Jaamacadda_Daaru_Salaam.mw
@@ -1,7 +1,7 @@
 {{Infobox university
 | name              = Jaamacadda Daaru Salaam</br>Daaru Salaam University</br> جــــــامــعــة دار ســــلام
 | native_name       = 
-| image_name        = Daaru Salaam University.jpg |bSize = 80
+| image_name        =|bSize = 80
 | image_size        = 
 | image_alt         = 
 | caption           = Logo
