--- a/Maxamed_Cabdulaahi_Maxamed.mw
+++ b/Maxamed_Cabdulaahi_Maxamed.mw
@@ -1,7 +1,7 @@
 {{Macluumaad Qof Madax Ah
 |name         = Maxamed Cabdullaahi Farmaajo
 محمد عبد الله محمد
-|image        = Mohamed Abdullahi Farmaajo.jpg
+|image        =
 |image_size   = 250px	
 |office       = [[Madaxweyne|Madaxweynihii]] [[Madaxweyneyaashii Soomaaliya|9aad]] ee [[Jamhuuriyadda]] [[Soomaaliya]]	
 |term_start   = 8 Febraayo 2017
