Removing [[:c:File:Abdi_Farah_Shirdon.png|Abdi_Farah_Shirdon.png]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Ra'iisul_wasaarayaashii_Soomaaliya.mw
+++ b/Ra'iisul_wasaarayaashii_Soomaaliya.mw
@@ -212,7 +212,7 @@ Raisulwasaraayaashii Somaliya==
 |-
 ! style="background:#C0C0C0; color:black"|16
 | [[Cabdi Faarax Shirdoon]]
-| [[File:Abdi Farah Shirdon.png|80px]]
+|
 | 1958–
 | — 
 | 17 October 2012
@@ -258,7 +258,7 @@ File:Ali Mohammed Ghedi in Kenya.jpg
 
 File:Nuur Xasan Xuseen.jpg
 File:Cabdiweli Maxamed Cali.jpg|<center>[[Abdiweli Maxamed Cali]]</br> [[2011]] - [[2012]]</center>
-File:Abdi Farah Shirdon.png|[[Abdi farah Shirdon]]
+|[[Abdi farah Shirdon]]
 File:Abdiwali sheikh Ahmed.jpg|[[Abdiwali sheikh Ahmed]]
 </gallery>
 
