Removing [[:c:File:Abdiwali_sheikh_Ahmed.jpg|Abdiwali_sheikh_Ahmed.jpg]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Ra'iisul_wasaarayaashii_Soomaaliya.mw
+++ b/Ra'iisul_wasaarayaashii_Soomaaliya.mw
@@ -221,7 +221,7 @@ Raisulwasaraayaashii Somaliya==
 |-
 ! style="background:#C0C0C0; color:black"|17
 | [[Cabdiwali Sheekh Axmed]]
-| [[File:Abdiwali sheikh Ahmed.jpg|80px]]
+|
 | 1959–
 | — 
 | 21 December 2013
@@ -259,7 +259,7 @@ File:Ali Mohammed Ghedi in Kenya.jpg
 File:Nuur Xasan Xuseen.jpg
 File:Cabdiweli Maxamed Cali.jpg|<center>[[Abdiweli Maxamed Cali]]</br> [[2011]] - [[2012]]</center>
 |[[Abdi farah Shirdon]]
-File:Abdiwali sheikh Ahmed.jpg|[[Abdiwali sheikh Ahmed]]
+|[[Abdiwali sheikh Ahmed]]
 </gallery>
 
 == Sidoo kale fiiri ==
