Removing [[:c:File:Dagmada_Badhaadhe.png|Dagmada_Badhaadhe.png]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Jubaland.mw
+++ b/Jubaland.mw
@@ -58,7 +58,7 @@ Jubaland waxay xuduud la leedahay Dalka Itoobiya, Kenya iyo  maamulka konfur Gal
 
 [[Jilib]]     [[File:Dagmada Jilib.png|thumb| Halka ay kaga taal [[jilib]]]]
 
-[[Badhaadhe]]  [[File:Dagmada Badhaadhe.png|thumb| Halka ay kaga taal [[Badhaadhe]]]]
+[[Badhaadhe]]
 
 ==wabiyada Jubaland==
 Jubaland waxaa mara labo wabi kuwaas oo kala ah [[Wabiga Daawa]] iyo [[Wabiga Jubba]].
