Removing [[:c:File:Dagmada_Afmadoow.png|Dagmada_Afmadoow.png]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Jubaland.mw
+++ b/Jubaland.mw
@@ -52,7 +52,7 @@ Jubaland waxay xuduud la leedahay Dalka Itoobiya, Kenya iyo  maamulka konfur Gal
 
 [[Ceelwaaq]]   [[File:Dagmada Ceelwaaq.png|thumb| Halka ay kaga taal [[Ceelwaaq]]]]
 
-[[Afmadow]]   [[File:Dagmada Afmadoow.png|thumb| Halka ay kaga taal [[Afmadoow]]]]
+[[Afmadow]]
 
 [[Beledxawo|Baledxawo]]  [[File:Dagmada Baledxawo.png|thumb| Halka ay kaga taal [[Beledxawo|Baledxawo]]]]
 
