Removing [[:c:File:Dagmada_Jamaame.png|Dagmada_Jamaame.png]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Jubaland.mw
+++ b/Jubaland.mw
@@ -48,7 +48,7 @@ Jubaland waxay xuduud la leedahay Dalka Itoobiya, Kenya iyo  maamulka konfur Gal
 
 [[Luuq]]       [[File:Dagmada Luuq.png|thumb| Halka ay kaga taal [[Luuq]]]]
 
-[[Jamaame]]     [[File:Dagmada Jamaame.png|thumb| Halka ay kaga taal [[Jamaame]]]]
+[[Jamaame]]
 
 [[Ceelwaaq]]   [[File:Dagmada Ceelwaaq.png|thumb| Halka ay kaga taal [[Ceelwaaq]]]]
 
