Removing [[:c:File:Dagmada_Saakow.png|Dagmada_Saakow.png]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Jubaland.mw
+++ b/Jubaland.mw
@@ -38,7 +38,7 @@ Jubaland waxay xuduud la leedahay Dalka Itoobiya, Kenya iyo  maamulka konfur Gal
 
 [[Doolow]]   [[File:Dagmada Doolow.png|thumb| Halka ay kaga taal [[Doolow]]]]
 
-[[Saakow]]  [[File:Dagmada Saakow.png|thumb| Halka ay kaga taal [[Saakow]]]]
+[[Saakow]]
 
 [[Garbaharrey]] [[File:Dagmada Garbaharrey.png|thumb| Halka ay kaga taal [[Garbaharrey]]]]
 
