Removing [[:c:File:Dagmada_Jilib.png|Dagmada_Jilib.png]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Jubaland.mw
+++ b/Jubaland.mw
@@ -56,7 +56,7 @@ Jubaland waxay xuduud la leedahay Dalka Itoobiya, Kenya iyo  maamulka konfur Gal
 
 [[Beledxawo|Baledxawo]]  [[File:Dagmada Baledxawo.png|thumb| Halka ay kaga taal [[Beledxawo|Baledxawo]]]]
 
-[[Jilib]]     [[File:Dagmada Jilib.png|thumb| Halka ay kaga taal [[jilib]]]]
+[[Jilib]]
 
 [[Badhaadhe]]
 
