Removing [[:c:File:Dagmada_Baledxawo.png|Dagmada_Baledxawo.png]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Jubaland.mw
+++ b/Jubaland.mw
@@ -54,7 +54,7 @@ Jubaland waxay xuduud la leedahay Dalka Itoobiya, Kenya iyo  maamulka konfur Gal
 
 [[Afmadow]]
 
-[[Beledxawo|Baledxawo]]  [[File:Dagmada Baledxawo.png|thumb| Halka ay kaga taal [[Beledxawo|Baledxawo]]]]
+[[Beledxawo|Baledxawo]]
 
 [[Jilib]]
 
