Removing [[:c:File:Dagmada_Doolow.png|Dagmada_Doolow.png]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Doolow.mw
+++ b/Doolow.mw
@@ -12,7 +12,7 @@
 |flag_size              =
 |image_seal             = 
 |seal_size              =
-|image_map              =Dagmada Doolow.png 
+|image_map              =
 |mapsize                = 
 |map_caption            = 
 |pushpin_map            =Somalia
