Removing [[:c:File:Dagmada_Doolow.png|Dagmada_Doolow.png]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Jubaland.mw
+++ b/Jubaland.mw
@@ -36,7 +36,7 @@ Jubaland waxay xuduud la leedahay Dalka Itoobiya, Kenya iyo  maamulka konfur Gal
 
 [[Kismaayo]] [[File:Dagmada Kismaayo.png|thumb| Halka ay kaga taal [[Kismaayo]]]]
 
-[[Doolow]]   [[File:Dagmada Doolow.png|thumb| Halka ay kaga taal [[Doolow]]]]
+[[Doolow]]
 
 [[Saakow]]
 
