Removing [[:c:File:Dagmada_Luuq.png|Dagmada_Luuq.png]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Jubaland.mw
+++ b/Jubaland.mw
@@ -46,7 +46,7 @@ Jubaland waxay xuduud la leedahay Dalka Itoobiya, Kenya iyo  maamulka konfur Gal
 
 [[Burdhubo]]       [[File:Dagmada Burdhubo.jpg|thumb| Halka ay kaga taal [[Burdhubo]]]]
 
-[[Luuq]]       [[File:Dagmada Luuq.png|thumb| Halka ay kaga taal [[Luuq]]]]
+[[Luuq]]
 
 [[Jamaame]]
 
