Removing [[:c:File:Dagmada_Ceelwaaq.png|Dagmada_Ceelwaaq.png]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Ceelwaaq.mw
+++ b/Ceelwaaq.mw
@@ -7,7 +7,7 @@
 |nickname               = 
 |settlement_type        = Magaalo                 =
 <!-- images and maps  ----------->
-|image_skyline          = Dagmada Ceelwaaq.png
+|image_skyline          =
 |imagesize              = 300px
 |image_caption          = 
 |image_flag             = 
