Removing [[:c:File:Dagmada_Ceelwaaq.png|Dagmada_Ceelwaaq.png]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Jubaland.mw
+++ b/Jubaland.mw
@@ -50,7 +50,7 @@ Jubaland waxay xuduud la leedahay Dalka Itoobiya, Kenya iyo  maamulka konfur Gal
 
 [[Jamaame]]
 
-[[Ceelwaaq]]   [[File:Dagmada Ceelwaaq.png|thumb| Halka ay kaga taal [[Ceelwaaq]]]]
+[[Ceelwaaq]]
 
 [[Afmadow]]
 
