Removing [[:c:File:Dagmada_Garbaharrey.png|Dagmada_Garbaharrey.png]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Jubaland.mw
+++ b/Jubaland.mw
@@ -40,7 +40,7 @@ Jubaland waxay xuduud la leedahay Dalka Itoobiya, Kenya iyo  maamulka konfur Gal
 
 [[Saakow]]
 
-[[Garbaharrey]] [[File:Dagmada Garbaharrey.png|thumb| Halka ay kaga taal [[Garbaharrey]]]]
+[[Garbaharrey]]
 
 [[Bu'aale]]     [[File:Dagmada Bu'aale.png|thumb| Halka ay kaga taal [[Bu'aale]]]]
 
