Removing [[:c:File:Dagmada_Garbaharrey.png|Dagmada_Garbaharrey.png]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Garbaharrey.mw
+++ b/Garbaharrey.mw
@@ -5,7 +5,7 @@
 |image_caption          =
 |image_flag             =
 |flag_size              =
-|image_map              =Dagmada Garbaharrey.png 
+|image_map              =
 |pushpin_map            =Somalia
 |pushpin_label_position =bottom
 |pushpin_map_caption    =Meesha dhacdo Soomaaliya.
