--- a/Kismaayo.mw
+++ b/Kismaayo.mw
@@ -5,7 +5,7 @@
 | nickname               =  
 | settlement_type        = [[Dagmo]]
 | motto                  = 
-| image_skyline          = Dagmada Kismaayo.png
+| image_skyline          =
 | imagesize              =  
 | image_caption          = 
 | image_flag             =  
