Removing [[:c:File:Dagmada_Kismaayo.png|Dagmada_Kismaayo.png]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Jubaland.mw
+++ b/Jubaland.mw
@@ -34,7 +34,7 @@ Jubaland waxay xuduud la leedahay Dalka Itoobiya, Kenya iyo  maamulka konfur Gal
 == Dagmooyinka Jubaland ==
 [[Bardhere]] [[File:Dagmada Bardhere.jpg|thumb| Halka ay kaga taal [[Bardhere]]]]
 
-[[Kismaayo]] [[File:Dagmada Kismaayo.png|thumb| Halka ay kaga taal [[Kismaayo]]]]
+[[Kismaayo]]
 
 [[Doolow]]
 
