--- a/Jubbada_Dhexe.mw
+++ b/Jubbada_Dhexe.mw
@@ -15,7 +15,7 @@ subdivision_type = |
 subdivision_type_local = |
 subdivision_list = |
 website = |
-image_location =Gobolka jubada dhexe.jpg|
+image_location =|
 }}
 
 
