Removing [[:c:File:Upper_Jubba_Of_Somalia.png|Upper_Jubba_Of_Somalia.png]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Gedo.mw
+++ b/Gedo.mw
@@ -11,7 +11,7 @@
 |image_flag             = 
 |image_seal             = 
 |image_shield           = 
-|image_map              =Upper Jubba Of Somalia.png
+|image_map              =
 |mapsize                = 
 |map_caption            =Meesha kaga taalo Soomaaliya.
 |coordinates_display    =inline,title
