Removing [[:c:File:Upper_Jubba_Of_Somalia.png|Upper_Jubba_Of_Somalia.png]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Jubada_Sare.mw
+++ b/Jubada_Sare.mw
@@ -6,7 +6,7 @@
 |motto                  = 
 |settlement_type        ='''[[Gobol]]''' 
 |image_shield           = 
-|image_map              =Upper Jubba Of Somalia.png
+|image_map              =
 |mapsize                = 
 |map_caption            =Jubada Sare
 |coordinates_display    =inline,title
