Removing [[:c:File:Dagmada_Bardhere.jpg|Dagmada_Bardhere.jpg]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Jubaland.mw
+++ b/Jubaland.mw
@@ -32,7 +32,7 @@
 Jubaland waxay xuduud la leedahay Dalka Itoobiya, Kenya iyo  maamulka konfur Galbeed 
 
 == Dagmooyinka Jubaland ==
-[[Bardhere]] [[File:Dagmada Bardhere.jpg|thumb| Halka ay kaga taal [[Bardhere]]]]
+[[Bardhere]]
 
 [[Kismaayo]]
 
