--- a/Bardhere.mw
+++ b/Bardhere.mw
@@ -7,7 +7,7 @@
 |nickname               = 
 |settlement_type        = Magaalo                 =
 <!-- images and maps  ----------->
-|image_skyline          = Dagmada Bardhere.jpg
+|image_skyline          =
 |imagesize              = 300px
 |image_caption          = 
 |image_flag             = 
