Removing [[:c:File:Jubaland_maabkeeda_ee_Somalia.jpg|Jubaland_maabkeeda_ee_Somalia.jpg]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Jubaland.mw
+++ b/Jubaland.mw
@@ -6,7 +6,7 @@
 |motto                  = 
 |settlement_type        ='''[[Mamul Goboleedl]]''' 
 |image_shield           = 
-|image_map              =Jubaland maabkeeda ee Somalia.jpg
+|image_map              =
 |mapsize                = 
 |map_caption            =Jubaland
 |subdivision_type       =Wadanka
