--- a/Bu'aale.mw
+++ b/Bu'aale.mw
@@ -12,7 +12,7 @@
 |flag_size              =
 |image_seal             = 
 |seal_size              =
-|image_map              =Dagmada Bu'aale.png 
+|image_map              =
 |mapsize                = 
 |map_caption            = 
 |pushpin_map            =Somalia
