Removing [[:c:File:Dagmada_Bu'aale.png|Dagmada_Bu'aale.png]], it has been deleted from Commons by [[:c:User:Fitindia|Fitindia]] because: per [[:c:Commons:Deletion requests/Files uploaded by Soomow98|]].

--- a/Jubaland.mw
+++ b/Jubaland.mw
@@ -42,7 +42,7 @@ Jubaland waxay xuduud la leedahay Dalka Itoobiya, Kenya iyo  maamulka konfur Gal
 
 [[Garbaharrey]]
 
-[[Bu'aale]]     [[File:Dagmada Bu'aale.png|thumb| Halka ay kaga taal [[Bu'aale]]]]
+[[Bu'aale]]
 
 [[Burdhubo]]       [[File:Dagmada Burdhubo.jpg|thumb| Halka ay kaga taal [[Burdhubo]]]]
 
