--- a/Doolow.mw
+++ b/Doolow.mw
@@ -65,4 +65,4 @@
 
 == Maamul ==
 Degmada Doolow waxay degmo noqotay horaantii 197yadii. Doolow waa magaalo weyn degmooyinka 6da ah ee [[Gedo|Gobolka Gedo]]. 
-Waxaana Doolow daga Qabaalida Mareexaan.
+Waxaana Doolow daga Qabaailada Gawaaweyn, Garre, Shirmooge iyo Mareexaan.
