*Empty MediaWiki Message*

--- a/Abaaley.mw
+++ b/Abaaley.mw
@@ -15,13 +15,13 @@
 |image_map              = 
 |mapsize                = 
 |map_caption            = 
-|pushpin_map            =Ethiopia
+|pushpin_map            ={{flag|Ethiopia}}
 |pushpin_label_position =Top
 |pushpin_mapsize        =
-|pushpin_map_caption    =Location in Itoobiya
+|pushpin_map_caption    ={{flag|Itoobiya}}
 |coordinates_display    =4°57'19"N   45°1'9"E
 |subdivision_type       =Dalka
-|subdivision_name       =[[Itoobiya]]
+|subdivision_name       ={{flag|Itoobiya}}
 |subdivision_type1      =Gobolka
 |subdivision_name1      =[[Shabeele]]
 |subdivision_type2      =Feer-feer
