--- a/Tamarta_la_cusbonaysiiyo.mw
+++ b/Tamarta_la_cusbonaysiiyo.mw
@@ -1,5 +1,5 @@
-[[File:Alternative Energies.jpg|thumb|Tamarta la cusboonaysiin karo]]
-[[File:Shepherds Flat Wind Farm 2011.jpg|thumb|Beeraha korantada ee [[hawo|hawada]].]]
+[[File:Alternative Energies.jpg|thumb|400px|Tamarta la cusboonaysiin karo]]
+[[File:Shepherds Flat Wind Farm 2011.j<big>Big text</big>pg|thumb|Beeraha korantada ee [[hawo|hawada]].]]
 [[File:ThreeGorgesDam-China2009.jpg|thumb|biyo-xidheen]]
 [[File:Faz S Sofia canavial 090607 REFON.JPG|thumb|]]
 '''Tamarta la cusboonaysiin karo''' ({{lang-en|renewalble energy}}; {{lang-ar|طاقة متجددة}}) waa nooc ka mid ah [[tamar]]ta taasi oo dib loo cuboonaysiin karo [[awood]]a ku jirta. Tamartaas oo kale wuxu ka yimaada [[dabeyl]], [[qorax]] iyo [[mowjad]].
