*Empty MediaWiki Message*

--- a/Tuas.mw
+++ b/Tuas.mw
@@ -1,8 +1,7 @@
 
 
 Tuas
-
-{{Flag|Singapore}}
+[[Singabuur]]
 
 
 Tuas waa aag qorsheyn ah oo ku yaal gobolka Galbeedka Singapore. Waxaa xiran Western Catchment ee waqooyiga, Pioneer ilaa bari iyo Dabaqadaha Johor iyo galbeed. Tuas waxay sidoo kale la wadaagtaa xudduudaha badda oo ay la wadaagto aagga qorshaha galbeedka ee galbeedka.
